--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "express": "^4.21.2",
     "gsap": "^3.12.7",
     "three": "^0.174.0",
     "vite": "^6.2.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
